---------------------------------------------------------------------------------------------------
Version: 20.1.13
Date: 2022-XX-XX
  Features:
  Changes:
  Bugfixes:
  Info:
    - Updated licence within mod to match Mod Portal.
---------------------------------------------------------------------------------------------------
Version: 20.1.12
Date: 2022-08-29
  Features:
  Changes:
  Bugfixes:
    - Stopped some edge cases (atomic bomb) that could kill the lamp of a power pole.
    - Prevented any lights that are killed (by script ?) showing in the kill/loss screen.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.1.11
Date: 2020-11-26
  Features:
    - Updated and tested with Factorio 1.1.0 as-is.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 19.1.10
Date: 2020-10-05
  Features:
    - Add mod setting to control light brightness.
  Changes:
  Bugfixes:
    - Fix error for power pole entities that aren't valid (encountered after other mods removed).
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.9
Date: 2020-05-02
  Features:
  Changes:
    - On technology researched no longer triggers a surface scan for hidden lights unless the research is lit power pole related.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.8
Date: 2020-01-23
  Features:
    - Updated mod to Factorio 0.18 as-is
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.1.7
Date: 2019-05-21
  Features:
  Changes:
  Bugfixes:
    - handles power poles with suppy area of 0 without error. doesn't light them up. Fixes compatibility with cargoship mod.
  Info: