@@ -1,14 +1,15 @@
 [mod-setting-name]
-power-pole-wire-reach-lighted-percent=Power Poles Lighted Wire Reach Percentage
+power-pole-powered-area-lighted-percent=Power Pole's Lighted Powered Area Percentage
+power-pole-connection-reach-lighted-percent=Power Pole's Connection Reach Area Percentage
 light-power-usage-watts=Inbuilt Light Power Usage (watts)
-factory-buildings-lighted-edge-tiles=Factory Buildings Edge Tiles Lighted
 turrets-lighted-edge-tiles=Turrets Edge Tiles Lighted
 research-unlock=Require Research First
 inbuilt_lighting-light_brightness=Light Brightness
 
 
 [mod-setting-description]
-power-pole-wire-reach-lighted-percent=The percentage of each power pole's wire reach that is lit. Scales with power pole reach. Setting to 0 will remove the lights. Mod Default Setting = 100
+power-pole-powered-area-lighted-percent=The percentage of each power pole's powered area that is lit. The greater of a power pole's "lighted powered area" and its "lighted connection reach" will set the light size. Mod Default Setting = 100
+power-pole-connection-reach-lighted-percent=The percentage of each power pole's connection reach (between poles) that is lit. The greater of a power pole's "lighted powered area" and "lighted connection reach" will set the light size. Mod Default Setting = 0
 light-power-usage-watts=The power usage of each inbuilt light. When set to 0 watts no electrical network is required for them to work. Anything above 0 watts requires active electricity for them to work. A standard light is 5000 watts. Mod Default Setting = 0.
 turrets-lighted-edge-tiles=If all turrets are lighted and the number of tiles beyond the edge lit. Setting to 0 is just the turret size. Setting to -1 disables the feature. Use in early game only as once above 500 turrets it can slow down UPS/game speed. Mod Default Setting = -1
 research-unlock=Adds a cheap early game research that must be completed to get the lighting feature.
@@ -28,78 +29,78 @@ inbuilt-lighting=Enables automatic lighting of all mod specified buildings.
 
 
 [entity-name]
-hiddenlight-1=Inbuilt Light
-hiddenlight-2=Inbuilt Light
-hiddenlight-3=Inbuilt Light
-hiddenlight-4=Inbuilt Light
-hiddenlight-5=Inbuilt Light
-hiddenlight-6=Inbuilt Light
-hiddenlight-7=Inbuilt Light
-hiddenlight-8=Inbuilt Light
-hiddenlight-9=Inbuilt Light
-hiddenlight-10=Inbuilt Light
-hiddenlight-11=Inbuilt Light
-hiddenlight-12=Inbuilt Light
-hiddenlight-13=Inbuilt Light
-hiddenlight-14=Inbuilt Light
-hiddenlight-15=Inbuilt Light
-hiddenlight-16=Inbuilt Light
-hiddenlight-17=Inbuilt Light
-hiddenlight-18=Inbuilt Light
-hiddenlight-19=Inbuilt Light
-hiddenlight-20=Inbuilt Light
-hiddenlight-21=Inbuilt Light
-hiddenlight-22=Inbuilt Light
-hiddenlight-23=Inbuilt Light
-hiddenlight-24=Inbuilt Light
-hiddenlight-25=Inbuilt Light
-hiddenlight-26=Inbuilt Light
-hiddenlight-27=Inbuilt Light
-hiddenlight-28=Inbuilt Light
-hiddenlight-29=Inbuilt Light
-hiddenlight-30=Inbuilt Light
-hiddenlight-31=Inbuilt Light
-hiddenlight-32=Inbuilt Light
-hiddenlight-33=Inbuilt Light
-hiddenlight-34=Inbuilt Light
-hiddenlight-35=Inbuilt Light
-hiddenlight-36=Inbuilt Light
-hiddenlight-37=Inbuilt Light
-hiddenlight-38=Inbuilt Light
-hiddenlight-39=Inbuilt Light
-hiddenlight-40=Inbuilt Light
-hiddenlight-41=Inbuilt Light
-hiddenlight-42=Inbuilt Light
-hiddenlight-43=Inbuilt Light
-hiddenlight-44=Inbuilt Light
-hiddenlight-45=Inbuilt Light
-hiddenlight-46=Inbuilt Light
-hiddenlight-47=Inbuilt Light
-hiddenlight-48=Inbuilt Light
-hiddenlight-49=Inbuilt Light
-hiddenlight-50=Inbuilt Light
-hiddenlight-51=Inbuilt Light
-hiddenlight-52=Inbuilt Light
-hiddenlight-53=Inbuilt Light
-hiddenlight-54=Inbuilt Light
-hiddenlight-55=Inbuilt Light
-hiddenlight-56=Inbuilt Light
-hiddenlight-57=Inbuilt Light
-hiddenlight-58=Inbuilt Light
-hiddenlight-59=Inbuilt Light
-hiddenlight-60=Inbuilt Light
-hiddenlight-61=Inbuilt Light
-hiddenlight-62=Inbuilt Light
-hiddenlight-63=Inbuilt Light
-hiddenlight-64=Inbuilt Light
-hiddenlight-65=Inbuilt Light
-hiddenlight-66=Inbuilt Light
-hiddenlight-67=Inbuilt Light
-hiddenlight-68=Inbuilt Light
-hiddenlight-69=Inbuilt Light
-hiddenlight-70=Inbuilt Light
-hiddenlight-71=Inbuilt Light
-hiddenlight-72=Inbuilt Light
-hiddenlight-73=Inbuilt Light
-hiddenlight-74=Inbuilt Light
-hiddenlight-75=Inbuilt Light
+hiddenlight-1=Inbuilt Light 1
+hiddenlight-2=Inbuilt Light 2
+hiddenlight-3=Inbuilt Light 3
+hiddenlight-4=Inbuilt Light 4
+hiddenlight-5=Inbuilt Light 5
+hiddenlight-6=Inbuilt Light 6
+hiddenlight-7=Inbuilt Light 7
+hiddenlight-8=Inbuilt Light 8
+hiddenlight-9=Inbuilt Light 9
+hiddenlight-10=Inbuilt Light 10
+hiddenlight-11=Inbuilt Light 11
+hiddenlight-12=Inbuilt Light 12
+hiddenlight-13=Inbuilt Light 13
+hiddenlight-14=Inbuilt Light 14
+hiddenlight-15=Inbuilt Light 15
+hiddenlight-16=Inbuilt Light 16
+hiddenlight-17=Inbuilt Light 17
+hiddenlight-18=Inbuilt Light 18
+hiddenlight-19=Inbuilt Light 19
+hiddenlight-20=Inbuilt Light 20
+hiddenlight-21=Inbuilt Light 21
+hiddenlight-22=Inbuilt Light 22
+hiddenlight-23=Inbuilt Light 23
+hiddenlight-24=Inbuilt Light 24
+hiddenlight-25=Inbuilt Light 25
+hiddenlight-26=Inbuilt Light 26
+hiddenlight-27=Inbuilt Light 27
+hiddenlight-28=Inbuilt Light 28
+hiddenlight-29=Inbuilt Light 29
+hiddenlight-30=Inbuilt Light 30
+hiddenlight-31=Inbuilt Light 31
+hiddenlight-32=Inbuilt Light 32
+hiddenlight-33=Inbuilt Light 33
+hiddenlight-34=Inbuilt Light 34
+hiddenlight-35=Inbuilt Light 35
+hiddenlight-36=Inbuilt Light 36
+hiddenlight-37=Inbuilt Light 37
+hiddenlight-38=Inbuilt Light 38
+hiddenlight-39=Inbuilt Light 39
+hiddenlight-40=Inbuilt Light 40
+hiddenlight-41=Inbuilt Light 41
+hiddenlight-42=Inbuilt Light 42
+hiddenlight-43=Inbuilt Light 43
+hiddenlight-44=Inbuilt Light 44
+hiddenlight-45=Inbuilt Light 45
+hiddenlight-46=Inbuilt Light 46
+hiddenlight-47=Inbuilt Light 47
+hiddenlight-48=Inbuilt Light 48
+hiddenlight-49=Inbuilt Light 49
+hiddenlight-50=Inbuilt Light 50
+hiddenlight-51=Inbuilt Light 51
+hiddenlight-52=Inbuilt Light 52
+hiddenlight-53=Inbuilt Light 53
+hiddenlight-54=Inbuilt Light 54
+hiddenlight-55=Inbuilt Light 55
+hiddenlight-56=Inbuilt Light 56
+hiddenlight-57=Inbuilt Light 57
+hiddenlight-58=Inbuilt Light 58
+hiddenlight-59=Inbuilt Light 59
+hiddenlight-60=Inbuilt Light 60
+hiddenlight-61=Inbuilt Light 61
+hiddenlight-62=Inbuilt Light 62
+hiddenlight-63=Inbuilt Light 63
+hiddenlight-64=Inbuilt Light 64
+hiddenlight-65=Inbuilt Light 65
+hiddenlight-66=Inbuilt Light 66
+hiddenlight-67=Inbuilt Light 67
+hiddenlight-68=Inbuilt Light 68
+hiddenlight-69=Inbuilt Light 69
+hiddenlight-70=Inbuilt Light 70
+hiddenlight-71=Inbuilt Light 71
+hiddenlight-72=Inbuilt Light 72
+hiddenlight-73=Inbuilt Light 73
+hiddenlight-74=Inbuilt Light 74
+hiddenlight-75=Inbuilt Light 75
