@@ -1,0 +1,8 @@
+{
+    "mod-setting": [
+        [
+            "power-pole-wire-reach-lighted-percent",
+            "power-pole-powered-area-lighted-percent"
+        ]
+    ]
+}
